# FlightFinderEngine

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  benchmark_supreme_test.py  pyproject.toml  requirements.txt  server.py
.github/badges/: coverage-badge.json
.github/workflows/: ci.yml
docs/: provider-api-research-2026-03-21.md  provider-iteration-log-2026-03-21.md  provider-research.md
scripts/: benchmark_provider_coverage.py  generate_coverage_badge.py  restart_server.cmd  restart_server.ps1  restart_server.zsh
src/: __main__.py  app.py  config.py  exceptions.py
src/data/: __init__.py  airports.py  hub_pool.py  resources.py
src/engine/: optimizer.py
src/flight_layover_lab/: __init__.py  __main__.py  airports.py  app.py  config.py  exceptions.py  http_server.py  hub_pool.py  logging_utils.py  models.py  progress.py  resources.py  route_graph.py  search_jobs.py  utils.py
src/flight_layover_lab/engine/: __init__.py  optimizer.py
src/flight_layover_lab/providers/: __init__.py  _cache.py  amadeus.py  google_flights.py  kayak.py  kiwi.py  multi.py  serpapi.py  skyscanner.py
src/models/: __init__.py
src/providers/: __init__.py  _cache.py  amadeus.py  azair.py  google_flights.py  kayak.py  kiwi.py  multi.py  ryanair.py  serpapi.py  skyscanner.py  travelpayouts.py
src/services/: __init__.py  http_server.py  progress.py  route_graph.py  search_jobs.py
src/utils/: __init__.py  constants.py  logging.py
static/: app.js  index.html  styles.css
tests/integration/: test_provider_e2e_regression_perf.py
tests/unit/: test_engine_logic.py  test_generate_coverage_badge.py  test_http_server.py  test_hub_pool.py  test_logging_utils.py  test_optimizer_helper_paths.py  test_progress.py  test_provider_clients.py  test_provider_helper_paths.py  test_route_graph.py  test_scraper_providers.py  test_search_jobs.py  test_support_modules.py
