[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flightfinder-engine"
version = "0.2.0"
description = "Layover-first flight search engine for direct, stopover, and split-ticket itinerary discovery"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
  { name = "Alex Dragut" },
]
keywords = [
  "aviation",
  "flight-search",
  "itinerary-optimization",
  "layovers",
  "travel-tech",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "fast-flights>=2.2",
  "requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/alexdragut20/FlightFinderEngine"
Repository = "https://github.com/alexdragut20/FlightFinderEngine"
Issues = "https://github.com/alexdragut20/FlightFinderEngine/issues"

[project.scripts]
flightfinder-engine = "src.app:main"

[project.optional-dependencies]
dev = [
  "pre-commit>=3.8.0",
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
]
scrape = [
  "playwright>=1.45.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
exclude = ["tests*", "docs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
skip_empty = true
show_missing = true
fail_under = 90
